# climlab-rrtmg

./: LICENSE  README.md  meson.build  pyproject.toml  setup.py  setup.py_not
.github/workflows/: build-and-test.yml
ci/: requirements-linux.yml  requirements-macos-arm64.yml  requirements-macos.yml  requirements-windows.yml  requirements.yml
climlab_rrtmg/: __init__.py  meson.build  setup.py  setup.py_not
climlab_rrtmg/_rrtmg_lw/: __init__.py  setup.py
climlab_rrtmg/_rrtmg_sw/: setup.py
climlab_rrtmg/rrtmg_lw/: Driver.f90  meson.build  setup.py_not
climlab_rrtmg/rrtmg_sw/: Driver.f90  __init__.py  _rrtmg_sw.pyf  meson.build  setup.py
climlab_rrtmg/rrtmg_sw/sourcemods/: rrtmg_sw_rad.f90
climlab_rrtmg/tests/: meson.build  setup.py_not  test_climlab_rrtmg.py
